# CT-NeRF-jax

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
config_yamls/: inference_config.yaml  train_config.yaml
ctnerf/: constants.py  ct_creation.py  dataloading.py  model.py  models.py  ray_sampling.py  rays.py  utils.py  xray_creation.py
ctnerf/image_creation/: ct_creation.py  xray_creation.py
ctnerf/setup/: config.py  setup_functions.py
ctnerf/training/: dataloading.py  training.py
ctnerf/transforms/: __init__.py  ct_to_xray.py
data/: sources.txt
data/xrays/2 AC_CT_TBody/: meta.txt
devtools/: ct_creation.py  dataloading.py  generate_xrays.py  models.py  rays.py  train.py  utils.py
scripts/: generate_ct.py  generate_xrays.py  supplement_metadata.py  train.py  train_old.py
tests/: test_mae.py  test_model.py  test_plateau_sampling.py  test_rays.py  test_sampling.py
transforms/: ct_to_xray.py
