[project]
name = "ct-nerf-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cuda12]>=0.6.0",
    "pytest>=8.3.5",
    "simpleitk>=2.4.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ctnerf*"]
namespaces = true
