[project]
name = "ct-nerf-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aim>=3.28.0",
    "flax>=0.10.6",
    "grain>=0.2.8",
    "jax[cuda12]>=0.6.0",
    "jmp>=0.0.4",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "plotly>=6.0.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "simpleitk>=2.4.1",
    "torch",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ctnerf*"]
namespaces = true

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.7.0%2Bcpu.cxx11.abi-cp312-cp312-linux_x86_64.whl" }
